# brave

./: .gitignore  .travis.yml  Dockerfile  Makefile  Pipfile  README.md  brave.py  pytest.ini  requirements.txt  run.sh  tox.ini  youtubedltest.py
brave/: abstract_collection.py  config.py  config_file.py  exceptions.py  helpers.py  inputoutputoverlay.py  pipeline_messaging.py  session.py
brave/api/: __init__.py  logic.py  route_handler.py  websockets_handler.py
brave/connections/: __init__.py  connection.py  connection_to_mixer.py  connection_to_output.py
brave/inputs/: __init__.py  decklink.py  html.py  image.py  input.py  streamlink.py  tcp_client.py  test_audio.py  test_video.py  uri.py  youtubedl.py
brave/mixers/: __init__.py  mixer.py  source.py  source_collection.py
brave/outputs/: __init__.py  decklink.py  file.py  image.py  kvs.py  local.py  output.py  rtmp.py  tcp.py  webrtc.py
brave/overlays/: __init__.py  clock.py  effect.py  overlay.py  text.py
config/: default.yaml  empty.yaml  example_empty.yaml  example_four_squares.yaml  example_test_sounds.yaml  video_wall.yaml  video_wall_lite.yaml
docs/: api.md  building_webrender.md  config_file.md  faq.md  howto.md  inputs.md  install_centos7.md  install_kvs.md  install_macos.md  install_ubuntu.md  mixers.md  outputs.md  overlays.md  plugins_used.md
gst-WebRenderSrc/: .gitignore  CMakeLists.txt
gst-WebRenderSrc/cmake/: DownloadCEF.cmake
gst-WebRenderSrc/src/: CMakeLists.txt  cef_bridge.cpp  cef_bridge.h  cef_subprocess.cpp  gstwebrendersrc.c  gstwebrendersrc.h
gst-WebRenderSrc/src/cef/: Browser.cpp  Browser.h  Client.cpp  Client.h
public/: elements_table.html  index.html  style.css
public/css/: switch.css
public/js/: block-fields.js  components.js  constants.js  index.js  inputs.js  mixers.js  outputs.js  overlays.js  preview.js  webrtc.js  websocket.js
tests/: test_add_and_remove_from_mix.py  test_api.py  test_config_file.py  test_config_file_output.py  test_effect_overlay.py  test_elements_api_endpoint.py  test_file_output.py  test_image_input.py  test_image_output.py  test_initial_state.py  test_inputs.py  test_local_output.py  test_mixer_positioning.py  test_mixer_to_mixer.py  test_mixers.py  test_multiple_braves.py  test_multiple_inputs_and_mixers.py  test_multiple_outputs.py  test_outputs.py  test_outputs_with_input_source.py  test_outputs_with_no_source.py  test_overlays.py  test_overlays_on_multiple_mixers.py  test_restart.py  test_rtmp.py  test_seek.py  test_tcp.py  test_text_overlay_element_connects_successfully.py  test_uri_input.py  utils.py
tests/assets/: 2_second_audio.m4a  5_second_audio.m4a
tests/unit/: test_config.py  test_connection_collection.py
